# cestimator

./: .gitattributes  .gitignore  .travis.yml  Makefile.am  README.md  US_SwapRates.csv  cestimator  cestimator.cpp  cestimator.hpp  configure  configure.ac  makefile  support.cpp  support.hpp  ucfy.cfg
.github/workflows/: .github.yml  .travis.yml
docs/: evaluation.md  maximum_likelihood.md  nonparametric.md
docs/estimators/: maximum_likelihood.md  robust.md  shrinkage.md
docs/optimizers/: optimizers.md
examples/: US_SwapRates.cpp  US_SwapRates.csv  basic.cpp  gaussian_mixture.cpp  gaussian_mixture.csv  gmm.cpp  markowitz.cpp  markowitz.csv  reference.py  sde.cpp
src/: cestimator.cpp  cestimator.hpp  makefile  support.cpp  support.hpp
src/SDE/: densities.cpp  models.cpp  propagators.cpp  sde.hpp  simulator.cpp
src/estimators/: estimators.cpp  estimators.hpp  mle.cpp  nonparametric.cpp  reference.py  robust.cpp  shrinkage.cpp
src/evaluators/: evaluators.cpp  evaluators.hpp
src/optimizers/: eiquadprog.hpp  optimizers.cpp  optimizers.hpp
src/utils/: printing.cpp  timing.cpp  utils.cpp  utils.hpp  visualizers.cpp
tests/: CMakeLists.txt  run_tests.cpp  test_inv.cpp
